--- a/puppet/modules/apache2/files/000-default.conf
+++ b/puppet/modules/apache2/files/000-default.conf
@@ -1,3 +1,25 @@
+
+<VirtualHost *:80>
+  ServerName localhost
+ 
+  Alias /agroforestry /var/www/agroforestry/site
+  DocumentRoot /var/www/agroforestry/site
+  <Directory "/var/www/agroforestry/site">
+    AllowOverride all
+    Order allow,deny
+    Allow from all
+  </Directory>
+  
+
+  Alias /wutmi /var/www/wutmi/public
+  DocumentRoot /var/www/wutmi/public
+  <Directory "/var/www/wutmi/public">
+    AllowOverride all
+    Order allow,deny
+    Allow from all
+  </Directory>
+</VirtualHost>
+
 <VirtualHost *:80>
         # The ServerName directive sets the request scheme, hostname and port that
         # the server uses to identify itself. This is used when creating
